Fonte Lato configurada

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,4 +1,5 @@
 @import "base/normalize.scss";
-@import "base/flexbox.scss";
+@import "base/fonts.scss";
+@import "base/setup.scss";
 
 @import "abstracts/variables.scss";
