--- a/src/styles/base/_setup.scss
+++ b/src/styles/base/_setup.scss
@@ -1,6 +1,7 @@
-body {
+div#app {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
     font-family: 'Lato', sans-serif;
+    background: #ccc;
 }
