--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,5 +1,7 @@
-@import "base/normalize.scss";
-@import "base/fonts.scss";
-@import "base/setup.scss";
+@import "base/normalize";
+@import "base/fonts";
+@import "base/setup";
 
-@import "abstracts/variables.scss";
+@import "abstracts/variables";
+
+@import "layout/container";
