Rotas ok, estilos iniciais ok

--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -1,2 +1,3 @@
-$cor-principal: rgb(52, 57, 133);
+$cor-principal: #2f342e;
 $cor-letra-principal: rgba(255, 255, 255, 0.925);
+$width-padrao: 8.333%;
