Implementação do grid system, separação do component de formulario em 'components's do sass

--- a/src/styles/layout/_grid.scss
+++ b/src/styles/layout/_grid.scss
@@ -1,50 +1,66 @@
-.flex-auto {
-    flex: 1 1 auto;
+.row {
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+.flex {
+    flex: 1;
 }
 
 .flex-1 {
-    flex: 1 1 $width-padrao;
+    flex-basis: $width-padrao;
+    max-width: $width-padrao;
 }
 
 .flex-2 {
-    flex: 1 1 $width-padrao*2;
+    flex-basis: $width-padrao*2;
+    max-width: $width-padrao*2;
 }
 
 .flex-3 {
-    flex: 1 1 $width-padrao*3;
+    flex-basis: $width-padrao*3;
+    max-width: $width-padrao*3;
 }
 
 .flex-4 {
-    flex: 1 1 $width-padrao*4;
+    flex-basis: $width-padrao*4;
+    max-width: $width-padrao*4;
 }
 
 .flex-5 {
-    flex: 1 1 $width-padrao*5;
+    flex-basis: $width-padrao*5;
+    max-width: $width-padrao*5;
 }
 
 .flex-6 {
-    flex: 1 1 $width-padrao*6;
+    flex-basis: $width-padrao*6;
+    max-width: $width-padrao*6;
 }
 
 .flex-7 {
-    flex: 1 1 $width-padrao*7;
+    flex-basis: $width-padrao*7;
+    max-width: $width-padrao*7;
 }
 
 .flex-8 {
-    flex: 1 1 $width-padrao*8;
+    flex-basis: $width-padrao*8;
+    max-width: $width-padrao*8;
 }
 
 .flex-9 {
-    flex: 1 1 $width-padrao*9;
+    flex-basis: $width-padrao*9;
+    max-width: $width-padrao*9;
 }
 .flex-10 {
-    flex: 1 1 $width-padrao*10;
+    flex-basis: $width-padrao*10;
+    max-width: $width-padrao*10;
 }
 
 .flex-11 {
-    flex: 1 1 $width-padrao*11;
+    flex-basis: $width-padrao*11;
+    max-width: $width-padrao*11;
 }
 
 .flex-12 {
-    flex: 1 1 100%;
+    flex-basis: 100%;
 }
