--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -4,6 +4,7 @@
 
 @import "abstracts/variables";
 
+@import "components/forms";
+
 @import "layout/container";
 @import "layout/grid";
-@import "layout/forms";
