--- a/src/styles/layout/_grid.scss
+++ b/src/styles/layout/_grid.scss
@@ -1,6 +1,12 @@
 .row {
     flex-direction: row;
     flex-wrap: wrap;
+    justify-content: space-between;
+    margin-bottom: 7px;
+}
+
+div[class|="flex"] {
+    justify-content: space-around;
 }
 
 .flex {
