Implementação da função de adicionar items à lista de produtos com object spread operator/object assign, melhora do button, transformação das rows em flex

--- a/src/styles/components/_button.scss
+++ b/src/styles/components/_button.scss
@@ -4,4 +4,8 @@
     background: #2e352eb8;
     border: 1px solid #ccc;
     font-size: larger;
+    &:active, &:hover {
+        cursor: pointer;
+        background: #2f352f;
+    }
 }
