Melhoras na grid

--- a/src/styles/components/_forms.scss
+++ b/src/styles/components/_forms.scss
@@ -1,5 +1,6 @@
 .form-container {
     display: flex;
+    justify-content: space-between;
     flex-direction: column;
     &__group {
         display: flex;
