--- a/src/styles/components/_forms.scss
+++ b/src/styles/components/_forms.scss
@@ -14,6 +14,10 @@
             padding: 0 5px;
             box-shadow: 0.5px 0.5px 4px 0px #ccc;
         }
+        span.error {
+            color: #ea6363;
+            font-size: 13px;
+        } 
     } 
 }
 @media (min-width: 900px) {
