--- a/src/styles/components/_forms.scss
+++ b/src/styles/components/_forms.scss
@@ -8,7 +8,7 @@
         label {
             margin-bottom: 5px;
         }
-        input {
+        input, select {
             border: 1px solid #ccc;
             height: 35px;
             padding: 0 5px;
